# Audio-Processor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AP_AudioIO/: CMakeLists.txt  readme.md
AP_AudioIO/include/: AP_AudioIO.hpp  AudioIO.hpp
AP_AudioIO/src/: AP_AudioIO.cpp  AudioIO.cpp
AP_Audio_Effect/: CMakeLists.txt
AP_Audio_Effect/include/: AP_Audio_Effect.hpp
AP_Audio_Effect/src/: AP_Audio_Effect.cpp
AP_Compressor/: CMakeLists.txt  ReadMe.md
AP_Compressor/include/: AP_Compressor.hpp
AP_Compressor/src/: AP_Compressor.cpp
AP_Delay/: CMakeLists.txt
AP_Delay/include/: AP_Delay.hpp
AP_Delay/src/: AP_Delay.cpp
AP_Drive/: CMakeLists.txt  readme.md
AP_Drive/include/: AP_Drive.hpp
AP_Drive/src/: AP_Drive.cpp
AP_Equalizer/include/: AP_Equalizer.hpp
AP_WavPlayer/: CMakeLists.txt
AP_WavPlayer/include/: AP_WavPlayer.hpp  portaudio.h
AP_WavPlayer/src/: AP_WavPlayer.cpp
tools/: AudioVisualizationTool.py  EqTester.py  PathList.py  WavHeaderReader.py  readme.md
